# htn2025

./: .gitignore
backend/: .env  .gitignore  README.md  __init__.py  app.py  main.py  pyproject.toml  requirements.txt  start_server.py  test_robot_controller.py
backend/outputs/: complete_bundle.json  guide.json  plan.json  robot_instructions.json  robot_instructions_example.json  servo_id_map.json  servo_sequence.json
backend/src/core/: config.py  exceptions.py  models.py
backend/src/pipeline/: skill_pipeline.py
backend/src/services/: compiler.py  llm_agent.py  robot_controller.py  scraper.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: ChatInterface.tsx  RobotControlPlatform.tsx  RobotViewer.tsx
frontend/lib/: api.ts
monkey/: platformio.ini
monkey/src/: main.cpp
robot/: platformio.ini  servo_test.py
robot/src/: main.cpp
