[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cohere>=5.18.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "httpx>=0.28.1",
    "orjson>=3.11.3",
    "tavily-python>=0.7.12",
    "trafilatura>=2.0.0",
]
